# OBJViewer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.linux  Makefile.osx  README.txt  TODO.txt  fragment-notexture.frag  fragment.frag  fragment.sl  vertex-notexture.vert  vertex.sl  vertex.vert
contrib/: objstats.py
models/chicken/: poule.mtl  readme.txt
models/digger/: EX50U.mtl  HITACHI_EX50U.txt
models/jackolantern/: jackolantern.mtl  readme.txt
models/motorbike/: Honda-CX500.mtl  readme.txt
models/pegasus/: readme.txt
models/toto/: PM3D_toto.mtl  readme.txt
src/: camera.cpp  camera.h  curve.cpp  curve.h  image.cpp  image.h  math3d.cpp  math3d.h  model.cpp  model.h  objparser.cpp  objparser.h  objviewer.cpp  objviewer.h  parser.cpp  parser.h  plyparser.cpp  plyparser.h  renderer.cpp  renderer.h  resources.cpp  resources.h  vector.cpp  vector.h
test/: math3dtest.cpp
